--- a/style.css
+++ b/style.css
@@ -230,3 +230,90 @@ main{
 .background_color--corredoras{
     background-color: var(--secondary-blue);
 }
+
+/* product detail */
+
+.main-product-detail{
+    position: relative;
+    width: 100%;
+    min-width: 32rem;
+    height: auto;
+    padding: 2rem 1rem;
+    background-color: var(--warn-black);
+}
+.product-detail--batata--logo{
+    /* recomendable poner un position relative al padre de este contenedor para poder usar bien el position absoluteNuestro API toma información minuto a minuto sobre las tasas que más determinan el comportamiento. */
+    position: absolute;
+    width: 4rem;
+    height: 2.5rem;
+    left: calc(50% - 2rem);
+    top: calc(0% - 1.2rem);
+    background-image: url('./assets/icons/batata.svg');
+}
+.product-detail--title{
+    width: 90%;
+    min-width: 28.8rem;
+    height: auto;
+    margin: 5rem auto 0;
+    text-align: center;
+}
+.product-detail--title h2{
+    margin-bottom: 2rem;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+}
+.product-detail--title p{
+    margin-bottom: 2rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #808080;
+}
+.product-detail--card{
+    width: 90%;
+    min-width: 28.8rem;
+    max-width: 40rem;
+    height: auto;
+    margin: 1.5rem auto;
+    padding: 1.5rem;
+    background-color: var(--black);
+    border-radius: 0.4rem;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.16);
+}
+.product-detail--card .icons{
+    display: inline-block;
+    width: 2.4rem;
+    height: 2.4rem;
+    margin-bottom: 1rem;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+.product-detail--card .clock{
+    background-image: url('./assets/icons/clock.svg');
+}
+.product-detail--card .eye{
+    background-image: url('./assets/icons/eye.svg');
+}
+.product-detail--card .dollar{
+    background-image: url('./assets/icons/dollar-sign.svg');
+}
+.product-detail--card .check{
+    background-image: url('./assets/icons/check-circle.svg');
+}
+.product--card-title{
+    margin-bottom: 1.5rem;
+    font-size: 1.8rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--just-white);
+}
+.product--card-body{
+    margin-bottom: 0.5rem;
+    font-weight: 500;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    color: #808080;
+}
