--- a/style.css
+++ b/style.css
@@ -317,3 +317,46 @@ main{
     line-height: 1.8rem;
     color: #808080;
 }
+.bitcoin-img-container{
+    width: 100%;
+    min-width: 32rem;
+    height: 60vh;
+    background-image: url('./assets/img/bitcoinbaby2x.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.bitcoin-img-container h2{
+    padding-top: 6rem;
+    font-size: 2.4rem;
+    font-weight: bold;
+    line-height: 2.6rem;
+    color: var(--just-white);
+    text-align: center;
+}
+.main-plans-container{
+    width: 100%;
+    min-width: 32rem;
+    padding-bottom: 7rem;
+    text-align: center;
+}
+.plans--title{
+    width: 90%;
+    max-width: 28.8rem;
+    height: auto;
+    margin: 0 auto 5rem;
+}
+.plans--title h3{
+    padding-top: 5rem;
+    font-size: 2.4rem;
+    font-weight: 700;
+    line-height: 2.6rem;
+    color: var(--warn-black);
+}
+.plans--title p{
+    padding-top: 3rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: #757575;
+}
