--- a/style.css
+++ b/style.css
@@ -131,10 +131,22 @@ main{
     line-height: 1.6rem;
     color: #757575;
 }
+.main-tables-container{
+    display: flex;
+    width: 100%;
+    max-width: 90rem;
+    margin: 0 auto;
+    column-gap: 3rem;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+}
+
 .main-currency-table{
     width: 70%;
+    scroll-snap-align: center;
     min-width: 23.5rem;
-    max-width: 50rem;
+    max-width: 30rem;
     height: 36rem;
     margin: 0 auto 3rem;
     font-family: 'Inter', sans-serif;
@@ -344,7 +356,7 @@ main{
     width: 90%;
     max-width: 28.8rem;
     height: auto;
-    margin: 0 auto 5rem;
+    margin: 0 auto;
 }
 .plans--title h3{
     padding-top: 5rem;
@@ -359,4 +371,132 @@ main{
     font-weight: 500;
     line-height: 1.8rem;
     color: #757575;
+}
+.plans-container--slider{
+    display: flex;
+    column-gap: 1.5rem;
+    height: 33rem;
+    overflow-x: scroll;
+    overscroll-behavior-x: contain;
+    scroll-snap-type: x proximity;
+    width: 100%;
+    max-width: 100rem;
+    margin: 0 auto;
+}
+.plans-container--card{
+    position: relative;
+    scroll-snap-align: center;
+    width: 70%;
+    min-width: 19rem;
+    max-width: 26rem;
+    height: 25rem;
+    margin: 5rem auto 0;
+    padding: 0 1.5rem;
+    background-color: var(--solf-blue);
+    border-radius: 1.5rem;
+    box-shadow: -0.4rem 0.5rem 0.8rem  rgba(89, 73, 30, 0.16);
+}
+.plans-container--card .promo{
+    position: absolute;
+    width: 12rem;
+    height: 3.1rem;
+    padding: 0.6rem;
+    left: calc(50% - 6rem);
+    top: calc(0% - 1.5rem);
+    font-size: 1.2rem;
+    border-radius: 0.8rem;
+    color: var(--just-white);
+}
+.recommended{
+    background-color: var(--bitcoin-orange);
+}
+.basico{
+    background-color: var(--secondary-blue);
+}
+.limitado{
+    background-color: var(--grey);
+}
+.plan-card--title{
+    padding-top: 3rem;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+.plan-card--price{
+    padding: 0.5rem 0;
+    font-size: 5.2rem;
+    font-weight: bold;
+    line-height: 5.3rem;
+    color: black;
+}
+.plan-card--price span{
+    position: absolute;
+    font-size: 1.2rem;
+    font-weight: 300;
+    top: calc(0% + 4rem );
+}
+.simbolo-dollar-recomendado span{
+    left: calc(50% - 4.2rem);
+}
+.simbolo-dollar-mensual span{
+    left: calc(50% - 3.5rem);
+}
+.simbolo-dollar-limitado span{
+    left: calc(50% - 5.2rem);
+}
+.plan-card--saving{
+    font-size: 1.2rem;
+    color: #757575;
+}
+.plan-card--ca{
+    width: 15rem;
+    height: 4.8rem;
+    margin-top: 2rem;
+    background-color: #FAF8F7;
+    border-radius: 0.4rem;
+    font-family: 'DM Sans', sans-serif;
+    font-size: 1.4rem;
+    font-weight: bold;
+    line-height: 1.8rem;
+    color: var(--black);
+}
+.ca-recomendado{
+    border: 0.2rem solid var(--bitcoin-orange);
+}
+.ca-mensual{
+    border: 0.2rem solid var(--secondary-blue);
+}
+.ca-limitado{
+    border: 0.2rem solid var(--grey);
+}
+.plan-card--ca span{
+    display: inline-block;
+    background-image: url('./assets/icons/orange-right-arrow.svg');
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 1.5rem;
+    height: 1.5rem;
+    vertical-align: text-bottom;
+}
+footer{
+    width: 100%;
+    height: 10rem;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    background-color: var(--bitcoin-orange);
+}
+.footer-list{
+    list-style: none;
+}
+.footer-list li{
+    margin: 1rem 0;
+}
+.footer-list a{
+    text-decoration: none;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.8rem;
+    color: var(--just-white);
 }
